# Project3

./: .gitignore  CMakeLists.txt  README.md  StuffToDo.md
docs/: README.md  StuffToDo.md
src/: chessEngineInterface.cpp  chessEngineInterface.h  main.cpp  puzzle.h  puzzleLoader.cpp  puzzleLoader.h  solverAStar.cpp  solverAStar.h  solverBacktracking.cpp  solverBacktracking.h  solverBeam.cpp  solverBeam.h  solverGreedy.cpp  solverGreedy.h  userInterface.cpp  userInterface.h  utils.cpp  utils.h  visualization.cpp  visualization.h
